--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,19 @@
             <version>2.0.27</version>
         </dependency>
 
+        <!--生成 PDF 的工具-->
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.30</version>
+        </dependency>
+
+        <!--寄送 Email 的工具-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
     </dependencies>
 
 
